reconfigured sass; done home page

--- a/public/index.html
+++ b/public/index.html
@@ -6,43 +6,20 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <link
+    <!-- <link
       rel="preload"
-      href="fonts/RobotoRegular.woff2"
+      href="/fonts/latoregular.woff2"
       as="font"
       type="font/woff2"
       crossorigin
     />
     <link
       rel="preload"
-      href="fonts/RobotoBold.woff2"
+      href="/fonts/latobold.woff2"
       as="font"
       type="font/woff2"
       crossorigin
-    />
-    <link
-      rel="preload"
-      href="fonts/TTFirsNeue-Regular.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    />
-    <link
-      rel="preload"
-      href="fonts/TTFirsNeue-Medium.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    />
-    <link
-      rel="preload"
-      href="fonts/TTFirsNeue-Bold.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    />
-    <link rel="stylesheet" href="css/vendor.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    /> -->
   </head>
   <body>
     <noscript>
