--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link
+      rel="preload"
+      href="/fonts/latoregular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="/fonts/latobold.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    /> -->
     <title>Vite App</title>
   </head>
   <body>
