--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       type="font/woff2"
       crossorigin
     /> -->
-    <title>Vite App</title>
+    <title>Frontend/Fullstack Developer</title>
   </head>
   <body>
     <div id="app"></div>
