--- a/index.html
+++ b/index.html
@@ -1,24 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link
-      rel="preload"
-      href="/fonts/latoregular.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    />
-    <link
-      rel="preload"
-      href="/fonts/latobold.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    /> -->
-    <title>Frontend/Fullstack Developer</title>
+    <title>Портфолио | Frontend/Fullstack</title>
   </head>
   <body>
     <div id="app"></div>
